#PK-1608 Added Item Detail to Add-On Product

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1592,6 +1592,12 @@
     "AdjustStockAmount": "Amount",
     "NoStockAdjustmentDescription": "No stock changes have been logged for this item yet.",
     "Pikachu:InvalidInventoryStock": "The field '{field1}' can not be greater than '{field2}'.",
-    "T-CatAbnormalStatus": "Abnormal Status detected for T-Cat Order #{0}. The status code {1} suggests {2}"
+    "T-CatAbnormalStatus": "Abnormal Status detected for T-Cat Order #{0}. The status code {1} suggests {2}",
+    "SelectSKU": "Select SKU",
+    "ProductAmount": "Product Amount",
+    "LimitPerOrder": "Limit Per Order",
+    "DisplayPrice": "Display Price",
+    "ProductId": "Product",
+    "ProductCondition": "Product Condition"
   }
 }
