#PK-1603 Implement campaign id tracking

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1586,9 +1586,11 @@
     "Enum:InventoryActionType.0": "Add Stock",
     "Enum:InventoryActionType.1": "Deduct Stock",
     "Enum:InventoryActionType.2": "Item Sold",
+    "Enum:InventoryActionType.3": "Add-on Product Sold",
     "StockAdded": "Stock Added",
     "StockDeducted": "Stock Deducted",
     "ItemSold": "Item Sold: Order #{0}",
+    "AddOnProductSold": "Add-on Product Sold: Order #{0}",
     "AdjustStockAmount": "Amount",
     "NoStockAdjustmentDescription": "No stock changes have been logged for this item yet.",
     "Pikachu:InvalidInventoryStock": "The field '{field1}' can not be greater than '{field2}'.",
