--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1566,9 +1566,11 @@
     "Enum:InventoryActionType.0": "Add Stock",
     "Enum:InventoryActionType.1": "Deduct Stock",
     "Enum:InventoryActionType.2": "商品售出",
+    "Enum:InventoryActionType.3": "Add-on Product Sold",
     "StockAdded": "手動入庫",
     "StockDeducted": "手動出庫",
     "ItemSold": "商品售出: 訂單 #{0}",
+    "AddOnProductSold": "加購商品售出: 訂單 #{0}",
     "AdjustStock": "手動調整庫存",
     "View": "查看紀錄",
     "StockType": "選擇庫存類別",
