#PK-1612 Campaign function modification
Introduces a 'Specific Members' option for campaign target audience selection. Updates validation logic, UI components, and localization to support the new option and ensure correct selection behavior.

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1471,6 +1471,9 @@
     "ShippingDiscountSettings": "Shipping Discount Settings",
     "SelectShippingMethods": "Select Shipping Methods",
     "AllMembers": "All Members",
+    "SpecificMembers": "Specific Members",
+    "SelectTargetAudience": "Select Target Audience",
+    "TargetAudienceValidationError": "The target audience must only contain All, All Members or any combination that does not include All and All Members.",
     "CustomCode": "Custom Code",
     "CreateCampaign": "Create Campaign",
     "CampaignDetails": "Campaign Details",
