--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1216,6 +1216,9 @@
     "ShippingDiscountSettings": "運費折扣設定",
     "SelectShippingMethods": "選擇配送方式",
     "AllMembers": "所有會員",
+    "SpecificMembers": "特定會員",
+    "SelectTargetAudience": "選擇目標受眾",
+    "TargetAudienceValidationError": "目標受眾只能是「全部」、「全部會員」，或是不包含「全部」和「全部會員」的其他組合。",
     "CustomCode": "自訂代碼",
     "CreateCampaign": "建立優惠活動",
     "CampaignDetails": "優惠活動詳情",
