--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1603,6 +1603,14 @@
     "LimitPerOrder": "Limit Per Order",
     "DisplayPrice": "Display Price",
     "ProductId": "Product",
-    "ProductCondition": "Product Condition"
+    "ProductCondition": "Product Condition",
+    "AllowToBeUsedWithOtherCampaigns": "Allow to be used with other campaigns",
+    "SpecificDiscounts": "Specific Discounts",
+    "SelectDiscounts": "Select Discounts",
+    "SpecificShoppingCredits": "Specific Shopping Credits",
+    "SelectShoppingCredits": "Select Shopping Credits",
+    "SpecificAddOnProducts": "Specific Add-On Products",
+    "SelectAddOnProducts": "Select Add-On Products",
+    "ShoppingCredit": "Shopping Credit"
   }
 }
