Commit For Pk-1625

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1603,6 +1603,8 @@
     "LimitPerOrder": "Limit Per Order",
     "DisplayPrice": "Display Price",
     "ProductId": "Product",
-    "ProductCondition": "Product Condition"
+    "ProductCondition": "Product Condition",
+    "FreeOrder": "Free Order",
+    "NotIssued": "Not Issued"
   }
 }
