#PK-1617 Add minimum spend amount for shopping credit

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1501,12 +1501,13 @@
     "Enum:AddOnDisplayPrice.0": "Do not display original price",
     "Enum:AddOnDisplayPrice.1": "Display product's original price",
     "Enum:AddOnDisplayPrice.2": "Display product's group buy price",
-    "Enum:AddOnProductCondition.0": "No minimum spending requirement",
-    "Enum:AddOnProductCondition.1": "Must meet a specified spending threshold",
+    "Enum:CampaignSpendCondition.0": "No minimum spending requirement",
+    "Enum:CampaignSpendCondition.1": "Must meet a specified spending threshold",
     "AddOnProductId": "Add-On Product",
     "IsUnlimitedQuantity": "Unlimited Quantity",
     "AddOnDisplayPrice": "Add-On Display Price",
     "AddOnProductCondition": "Add-On Product Condition",
+    "SpendCondition": "Spend Condition",
     "EditCampaign": "Edit Campaign",
     "Pikachu:CampaignWithSameNameAlreadyExists": "Campaign with same name '{name}' already exists.",
     "AreYouSureToSetCampaignStatus": "Are you sure you want to set this campaign as {0}?",
