--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1246,12 +1246,13 @@
     "Enum:AddOnDisplayPrice.0": "不顯示原價",
     "Enum:AddOnDisplayPrice.1": "顯示商品原價",
     "Enum:AddOnDisplayPrice.2": "顯示商品團購價",
-    "Enum:AddOnProductCondition.0": "無最低消費限制",
-    "Enum:AddOnProductCondition.1": "需達到特定消費門檻",
+    "Enum:CampaignSpendCondition.0": "無最低消費限制",
+    "Enum:CampaignSpendCondition.1": "需達到特定消費門檻",
     "AddOnProductId": "加購商品",
     "IsUnlimitedQuantity": "數量無限制",
     "AddOnDisplayPrice": "加購商品顯示價格",
     "AddOnProductCondition": "加購條件",
+    "SpendCondition": "花費條件",
     "EditCampaign": "編輯優惠活動",
     "Pikachu:CampaignWithSameNameAlreadyExists": "已存在相同名稱的優惠活動「{name}」。",
     "AreYouSureToSetCampaignStatus": "您確定要將此優惠活動設為 {0} 嗎？",
