#PK-1613 Show editor name in inventory log details modal
Added support to display the creator's name in the inventory log details modal. Introduced GetCreatorNameAsync to the application service and repository, updated the Blazor page and code-behind to fetch and show the editor's name, and added localization for the 'Edited At' label.

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1606,6 +1606,7 @@
     "OrderItemsReturnInitiatedTitle": "退貨申請已提交",
     "OrderItemsReturnInitiated": "已為訂單 #{0} 提交退貨申請，並建立新退貨訂單 #{1}。",
     "OrderItemsReturnCreatedTitle": "退貨訂單已建立",
-    "OrderItemsReturnCreated": "已從訂單 #{0} 建立新退貨訂單 #{1}。"
+    "OrderItemsReturnCreated": "已從訂單 #{0} 建立新退貨訂單 #{1}。",
+    "EditedAt": "編輯時間"
   }
 }
