--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1634,6 +1634,7 @@
     "OrderItemsReturnInitiatedTitle": "Return Request Submitted",
     "OrderItemsReturnInitiated": "Return requested for Order #{0}. New return Order #{1} created.",
     "OrderItemsReturnCreatedTitle": "Return Order Created",
-    "OrderItemsReturnCreated": "New return Order #{1} created from Order #{0}."
+    "OrderItemsReturnCreated": "New return Order #{1} created from Order #{0}.",
+    "EditedAt": "Edited At"
   }
 }
