Commit For Pk-1618

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1635,6 +1635,12 @@
     "OrderItemsReturnInitiated": "Return requested for Order #{0}. New return Order #{1} created.",
     "OrderItemsReturnCreatedTitle": "Return Order Created",
     "OrderItemsReturnCreated": "New return Order #{1} created from Order #{0}.",
-    "EditedAt": "Edited At"
+    "EditedAt": "Edited At",
+    "SubCategories": "Sub Categories",
+    "AddMain": "Add Main",
+    "AddSub": "Add Sub",
+    "EnglishName": "English Name",
+    "ZHName": "ZH Name",
+    "SelectMainCategory": "Select Main Category"
   }
 }
