#PK-1643 Update virtual bank transfer labels and localization
Replaced 'BankTransfer' with 'VirtualBankTransfer' and 'EcPayVirtualBankTransfer' in relevant Razor pages. Added corresponding localization entries for both English and Traditional Chinese to support the new labels.

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1649,6 +1649,8 @@
     "BankCode": "Bank Code",
     "BankAccountNumber": "Bank Account Number",
     "MinimumAmountLimit": "Minimum Amount Limit",
-    "MaximumAmountLimit": "Maximum Amount Limit"
+    "MaximumAmountLimit": "Maximum Amount Limit",
+    "VirtualBankTransfer": "Virtual Bank Transfer",
+    "EcPayVirtualBankTransfer": "ECPay Virtual Bank Transfer"
   }
 }
