--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -35,7 +35,7 @@
     "AllowShipToOverSea": "可寄送海外",
     "AllPayLogisticsID": "綠界物流號",
     "AmountReach": "當金額達到",
-    "AmountReceived/AmountReceivedExcludingShipping": "已收款項 (不含運費) / 已收款項 (含運費)",
+    "AmountReceived/AmountReceivedExcludingShipping": "已收款金額 (不包含運費) / 已收款金額 (包含運費)",
     "ApplyCondition": "套用條件",
     "ApplyRefund": "執行退款",
     "ApplyToAllGroupBuys": "套用至全部團購",
@@ -318,8 +318,8 @@
     "OrderedItems": "訂購的商品",
     "OrderInformation": "訂購人資訊",
     "OrderItems": "訂單項目",
-    "OrderNo": "訂單號碼",
-    "OrderQuantityPaid/TotalOrderQuantity": "訂單數量 (已付款) / 總訂單數量",
+    "OrderNo": "訂單編號",
+    "OrderQuantityPaid/TotalOrderQuantity": "已完成訂單數量 / 總訂單數量",
     "OrderShippingDetails": "訂單派送細節",
     "OrderStatus": "訂單狀態",
     "Orignal": "原訂單",
@@ -1077,7 +1077,7 @@
     "UnUsed": "未使用",
     "Period": "單位",
     "TimeRange": "時間區段",
-    "TotalOrders": "已完成訂單",
+    "TotalOrders": "總訂單數量",
     "NewMembersDashboard": "新註冊會員",
     "TotalSales": "總銷售額",
     "TotalProducts": "商品銷售數量",
@@ -1313,7 +1313,7 @@
     "MaxNumberOfItems": "最多商品數量",
     "AreYouSureYouWantToClearTheCarts": "所有選取購物車中的商品將被移除，此操作無法還原。",
     "Member": "會員",
-    "TotalAmount": "商品總額",
+    "TotalAmount": "訂單總金額",
     "Stock": "庫存",
     "SelectItem": "選取項目",
     "SelectCustomText": "自訂名稱",
@@ -1536,7 +1536,7 @@
     "Close": "關閉",
     "ReportUrl": "報表連結",
     "TotalQuantity": "訂單總數",
-    "SalesAmount/SalesAmountExcludingShipping": "銷售金額（不含運費）/ 銷售金額（含運費）",
+    "SalesAmount/SalesAmountExcludingShipping": "總銷售額 (不包含運費) / 總銷售額 (包含運費)",
     "RecipientMailbox": "收件人信箱",
     "Refunded": "已退款",
     "TradeDescription": "交易訊息",
@@ -1623,6 +1623,12 @@
     "MinimumAmountLimit": "最低金額限制",
     "MaximumAmountLimit": "最高金額限制",
     "VirtualBankTransfer": "虛擬帳號轉帳",
-    "EcPayVirtualBankTransfer": "綠界虛擬帳號轉帳"
+    "EcPayVirtualBankTransfer": "綠界虛擬帳號轉帳",
+    "CompleteOrders": "已完成訂單數量",
+    "SalesAmountExclShipping": "總銷售金額 (不含運費)",
+    "AmountReceivedExclShipping": "已收款金額 (不含運費)",
+    "ProfitShare%": "分潤%",
+    "ProfitShareEarnings": "分潤收益",
+    "ShippingFee": "運費"
   }
 }
