#PK-1647 Add addon product to order

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1659,6 +1659,7 @@
     "ProfitShareEarnings": "Profit Share Earnings",
     "CompletionFrom": "Completion From",
     "CompletionTo": "Completion To",
-    "ShippingFee": "Shipping Fee"
+    "ShippingFee": "Shipping Fee",
+    "(AddOnProduct)": "(Add-on Product)"
   }
 }
