#PK-1651 Add OnlyAvailable Campaigns filter

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1660,6 +1660,7 @@
     "CompletionFrom": "Completion From",
     "CompletionTo": "Completion To",
     "ShippingFee": "Shipping Fee",
-    "(AddOnProduct)": "(Add-on Product)"
+    "(AddOnProduct)": "(Add-on Product)",
+    "OnlyAvailable": "Only Available"
   }
 }
