#PK-1657 Order detail buttons modification

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -41,7 +41,7 @@
     "ApplyToAllGroupBuys": "套用至全部團購",
     "Approve ": "通過",
     "Approver": "審核人員",
-    "AreYouSureToCancelOrder?": "你確定要取消訂單?",
+    "AreYouSureToCancelOrder?": "您是否確定要取消此筆訂單？",
     "AreYouSureToDeleteSelectedItem": "請確認是否要刪除已選擇商品?",
     "AreYouSureToRefundThisOrder?": "您確定要對訂單退款嗎？",
     "AreYouSureToUpdateGreenWorld?": "您確定要更新綠界物流B2C嗎?",
