--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -333,7 +333,7 @@
     "AddressDetails": "Address Details",
     "OrderShippingDetails": "Order Shipping Details",
     "ShippingNumber": "Shipping Number",
-    "AreYouSureToCancelOrder?": "Are You Sure To Cancel The Order?",
+    "AreYouSureToCancelOrder?": "Are You Sure You Want To Cancel This Order?",
     "CombineOrders": "Combine Orders",
     "Notes": "Notes",
     "MerchantNotes": "Merchant Notes",
