Commit For Pk-1664

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -281,6 +281,7 @@
     "PostOffice": "Post Office",
     "SelfPickup": "Self-Pickup",
     "BlackCat": "Black Cat",
+    "EcpayBlackCat": "ECPay Black Cat",
     "BlackCat1": "B-Normal",
     "HomeDelivery": "Self Delivery",
     "OrderDetailsHomeDelivery": "Home Delivery",
@@ -582,7 +583,7 @@
     "Delivered": "Delivered",
     "Return": "Return",
     "EnterpricePurchase": "Enterprise Purchase",
-    "TCatDelivery": "t-cat(delivery)",
+    "TCatDelivery": "T-Cat",
     "TCatSevenToEleven": "t-cat(7-11)",
     "CashOnDelivery": "Cash On Delivery",
     "GeneralFood": "0001: General Food",
