--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -61,6 +61,7 @@
     "B-Freeze": "黑貓冷藏",
     "B-Frozen": "黑貓冷凍",
     "BlackCat": "綠界 | 黑貓宅急便",
+    "EcpayBlackCat": "綠界 | 黑貓宅急便",
     "BlackCat1": "綠界 | 黑貓宅急便",
     "BlackCatFreeze": "黑貓冷藏",
     "BlackCatFrozen": "黑貓冷凍",
