--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1642,6 +1642,12 @@
     "ConfirmManualBankTransferMessage": "您確定要確認這筆付款嗎？",
     "PaymentConfirmedTitle": "已確認收款",
     "PaymentConfirmed": "此筆款項已由 {0} 確認。",
-    "MaximumDeduction": "最高折抵金額"
+    "MaximumDeduction": "最高折抵金額",
+    "ZipCode": "郵遞區號",
+    "InputZipCode": "請輸入郵遞區號",
+    "InputCityName": "請輸入城市名稱",
+    "InputAddress": "請輸入地址",
+
+    "SelfPickUpInfo": "自取地址資訊"
   }
 }
