#PK-1670 Add OrderNo to shopping credit records and related logic
Introduces the OrderNo field to shopping credit models, DTOs, and database schema. Updates application and domain logic to record and display OrderNo for shopping credit transactions, including deduction, cashback, and cancellation scenarios. Enhances localization and UI to show OrderNo in credit descriptions. Refactors related service and repository methods to support the new field.

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1677,6 +1677,9 @@
     "InputZipCode": "Input Zip Code",
     "InputCityName": "Input City Name",
     "InputAddress": "Input Address",
-    "SelfPickUpInfo": "Self-Pickup Info"
+    "SelfPickUpInfo": "Self-Pickup Info",
+    "ShoppingCreditDescription:CashbackEarned": "Cashback Earned: Order#",
+    "ShoppingCreditDescription:OrderCancelled": "Order Cancelled: Order#",
+    "ShoppingCreditDescription:CreditDeduction": "Credit Deduction: Order#"
   }
 }
