--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1678,6 +1678,22 @@
     "InputCityName": "Input City Name",
     "InputAddress": "Input Address",
     "SelfPickUpInfo": "Self-Pickup Info",
+    
+    "ManageWallet": "Manage Wallet",
+    "PendingTransactions": "Pending Transactions",
+   
+    
+    "Timestamp": "Timestamp",
+    "TransactionNo": "Transaction No.",
+   
+    
+    
+    "Balance": "Balance",
+    "Note": "Note",
+    
+    "LogisticsFeeDeducted": "Logistics Fee Deducted",
+    "ManualTopUp": "Manual Top-Up",
+    "ManualDeduction": "Manual Deduction",
     "ShoppingCreditDescription:CashbackEarned": "Cashback Earned: Order#",
     "ShoppingCreditDescription:OrderCancelled": "Order Cancelled: Order#",
     "ShoppingCreditDescription:CreditDeduction": "Credit Deduction: Order#"
