--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1650,6 +1650,16 @@
     "SelfPickUpInfo": "自取地址資訊",
     "ShoppingCreditDescription:CashbackEarned": "購物回饋: 訂單#",
     "ShoppingCreditDescription:OrderCancelled": "訂單取消: 訂單#",
-    "ShoppingCreditDescription:CreditDeduction": "購物折抵: 訂單#"
+    "ShoppingCreditDescription:CreditDeduction": "購物折抵: 訂單#",
+   
+    "ManageWallet": "管理錢包",
+    "PendingTransactions": "待審核款項",
+    
+    "Balance": "餘額",
+    "Note": "備註",
+   
+    "LogisticsFeeDeducted": "物流費用扣除",
+    "ManualTopUp": "手動加值",
+    "ManualDeduction": "手動扣款"
   }
 }
