#PK-1674 File naming and localization

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1717,6 +1717,7 @@
     "ProductName": "Product Name",
     "TotalRevenue": "Total Revenue",
     "TotalQtySold": "Total Qty Sold",
-    "OrderItemDetails": "Order Item Details"
+    "OrderItemDetails": "Order Item Details",
+    "DashboardSalesReportFileName": "GroupBuy_Sales_Report"
   }
 }
