--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1683,6 +1683,10 @@
     "TotalQtySold": "總銷售數量",
     "OrderItemDetails": "訂單商品明細",
     "DashboardSalesReportFileName": "團購銷售報表",
-    "UnitsSold": "銷售單位數"
+    "UnitsSold": "銷售單位數",
+    "TransactionNo": "交易序號",
+    "WalletTransactionType:Deposit": "手動加值",
+    "WalletTransactionType:Deduction": "手動扣款"
+
   }
 }
