--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1740,6 +1740,7 @@
     "WalletEmail.Support": "If you have any questions, please contact our support team.",
     "WalletEmail.Regards": "Best regards,<br/>The ibosshops.com Team",
     "WalletDeductionNotification": "Wallet Deduction Notification",
-    "WalletRechargeNotification": "Wallet Recharge Notification"
+    "WalletRechargeNotification": "Wallet Recharge Notification",
+    "VipTierTimeAndResetConfigWarning": "Warning: Start date and reset frequency can not be modified after saving.\nAre you sure you want to proceed?"
   }
 }
