FIx for Pk-1723

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1733,8 +1733,10 @@
     "WalletTransactionType:Deposit": "Manual Top-Up",
     "WalletTransactionType:Deduction": "Manual Deduction",
     "WalletEmail.Greeting": "Dear {0},",
-    "WalletEmail.Body": "Your wallet has been debited.",
-    "WalletEmail.Amount": "Amount Deducted:",
+    "WalletEmail.DeductionBody": "An amount has been deducted from your wallet.",
+    "WalletEmail.RechargeBody": "Your wallet has been successfully recharged.",
+    "WalletEmail.DeductioAmount": "Amount Deducted:",
+    "WalletEmail.RechargeAmount": "Amount Added:",
     "WalletEmail.Type": "Transaction Type:",
     "WalletEmail.Balance": "Current Balance:",
     "WalletEmail.Support": "If you have any questions, please contact our support team.",
