--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1743,6 +1743,8 @@
     "WalletEmail.Regards": "Best regards,<br/>The ibosshops.com Team",
     "WalletDeductionNotification": "Wallet Deduction Notification",
     "WalletRechargeNotification": "Wallet Recharge Notification",
-    "VipTierTimeAndResetConfigWarning": "Warning: Start date and reset frequency can not be modified after saving.\nAre you sure you want to proceed?"
+    "VipTierTimeAndResetConfigWarning": "Warning: Start date and reset frequency can not be modified after saving.\nAre you sure you want to proceed?",
+    "Permission:TenantWalletManagement": "Wallet Management",
+    "Menu:TenantWalletManagement": "Wallet Management"
   }
 }
